<resources>
    <string name="app_name">WebShop</string>
    <string name="buy">Buy</string>
    <string name="price_format">"%.2f $"</string>
    <string name="sale_format">"-%s %%"</string>
    <string name="image_content_text_format">"%s image"</string>
    <string name="loading_products_error">Products loading error</string>
    <string name="loading_promotional_products_error">Promotional products loading error</string>
    <string name="no_internet_connection_warning">Check the internet connection and try again.</string>
    <string name="try_again_button">Try again</string>
    <string name="tittle_error_main_layout">No data and Internet</string>
    <string name="description_error_main_layout">Check the Internet connection and try again.</string>
    <string name="promotional_title">Promotional devices</string>
    <string name="devices_title">Devices</string>
    <string name="number_of_purchases_format">"Purchases: %s"</string>
    <string name="shared_image_transition_name">shared_image_transition_name</string>
    <string name="shared_price_transition_name">shared_price_transition_name</string>
    <string name="shared_title_transition_name">shared_title_transition_name</string>
    <string name="shared_sale_transition_name">shared_sale_transition_name</string>
    <string name="items_count">Items</string>
    <string name="basket_product_price">Price</string>
    <string name="saving">Saving</string>
    <string name="total_price">Total price</string>
    <string name="delete_uppercase">DELETE</string>
    <string name="removed_item_snackbar">Grocery has been removed from the basket.</string>
    <string name="undo_uppercase">UNDO</string>
    <string name="order">order</string>
    <string name="cvv">CVV</string>
    <string name="year">YY</string>
    <string name="month_year_separator">/</string>
    <string name="month">MM</string>
    <string name="number">Number</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="order_price">Order price:</string>
    <string name="ordering">Ordering</string>
    <string name="card_number">Card number</string>
    <string name="order_completed_title">Order completed</string>
    <string name="order_completed_message">Thank you for your purchase!</string>
    <string name="ok">Ok</string>
    <string name="order_error_title">Oops…</string>
    <string name="order_error_message">Something went wrong. Try again, please!</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_up_title">Don\'t have an account?</string>
    <string name="email_error">Invalid e-mail</string>
    <string name="password_error">Invalid password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="incorrect_password_for_user">Incorrect password for this e-mail</string>
    <string name="incorrect_email_for_user">There is no user with such e-mail</string>
    <string name="registration">Registration</string>
    <string name="successfully_authorized">Successfully authorized!</string>
    <string name="email_address_collision">The email address is already in use</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="log_out">Log out</string>
    <string name="basket">Basket</string>
    <string name="basket_empty_title">Basket is empty</string>
    <string name="basket_empty_text">Add groceries to basket and your will see them here.</string>
    <string name="basket_empty_button_text">Back to shopping</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_list_empty_query">Type something to find products</string>
    <string name="no_search_result">No results</string>
    <string name="no_order_error_title">No Orders :(</string>
    <string name="no_orders_error_message">Buy something and your purchased products will be here.</string>
    <string name="order_invalid_name">Invalid name</string>
    <string name="order_invalid_last_name">Invalid last name</string>
    <string name="order_invalid_card_number">Invalid card number</string>
    <string name="order_invalid_card_month">Invalid month</string>
    <string name="order_invalid_card_year">Invalid year</string>
    <string name="order_invalid_cv">Invalid cv</string>
    <string name="bought">Bought</string>
    <string name="bought_error_title">Oops…</string>
    <string name="bought_error_message">Something went wrong. Try again, please!</string>
    <string name="product_price">Price</string>
    <string name="products_amount">Amount</string>
    <string name="bought_products">Bought products</string>
    <string name="back_to_products">Back to products</string>
    <string name="set_profile_photo">Set profile photo</string>
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="set_picture_with">Set picture with…</string>
    <string name="taking_photo_error">Taking photo error</string>
    <string name="show_password">Show password</string>
    <string name="biometric_login_title">Login via Touch ID</string>
    <string name="biometric_login_description">Use a fingerprint to verify your identity</string>
    <string name="cancel">Cancel</string>
    <string name="biometric_enrolled_error_text">New fingerprint enrolled. Enter password, please.</string>
    <string name="biometric_error">Something went wrong. Enter, password, please.</string>
</resources>
