<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/orderConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ordering"
            android:textColor="#ffffff"
            android:textSize="42sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/order_price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView3"
            app:layout_constraintBaseline_toBaselineOf="@+id/orderTotalPrice"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/orderTotalPrice"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/orderTotalPrice"
            app:layout_constraintStart_toStartOf="parent"
    >
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/name"
                android:textColorHint="@color/color_accent"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/last_name"
                android:textColorHint="@color/color_accent"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textInputLayout3">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/card_number"
                android:inputType="numberSigned"
                android:textColorHint="@color/color_accent"
                android:textColor="@android:color/white"
                android:maxLength="16"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="45dp"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:id="@+id/textInputLayout4">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderCardMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/month"
                android:textColorHint="@color/color_accent"
                android:inputType="numberSigned"
                android:textColor="@android:color/white"
                android:maxLength="2"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/month_year_separator"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4" app:layout_constraintVertical_bias="0.36"
            android:id="@+id/textView2"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="45dp"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:id="@+id/textInputLayout5">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderCardYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/year"
                android:textColorHint="@color/color_accent"
                android:inputType="numberSigned"
                android:textColor="@android:color/white"
                android:maxLength="2"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="45dp"
            android:textColorHint="@color/color_accent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout5" android:layout_marginStart="24dp">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/orderCardCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:hint="@string/cv"
                android:inputType="numberPassword"
                android:textColorHint="@color/color_accent"
                android:textColor="@android:color/white"
                android:maxLength="3"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:id="@+id/buttonOrder"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/order"
            style="@style/ButtonPrimaryStyle"
            android:foreground="?selectableItemBackground"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
    </Button>
</android.support.constraint.ConstraintLayout>