<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/loginConstraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.login.LoginActivity"
        android:background="@drawable/form_screen_background"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="42sp"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailTextInput"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="80dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLabel"
            app:errorTextAppearance="@style/TextInputLabelErrorState"
            android:id="@+id/emailTextInput"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/passwordTextInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextInput"
            android:theme="@style/TextInputLabel"
            app:errorTextAppearance="@style/TextInputLabelErrorState"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/emailTextInput"
            app:layout_constraintEnd_toEndOf="@+id/emailTextInput" android:layout_marginTop="8dp">
        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            style="@style/ButtonPrimaryStyle"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInput"
            app:layout_constraintBottom_toTopOf="@+id/signUpTitle"
            app:layout_constraintStart_toStartOf="@+id/passwordTextInput"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextInput"
            android:layout_marginTop="32dp">
    </Button>
    <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Register"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTitle"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
    >
    </Button>
    <TextView
            android:text="@string/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpTitle"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin" android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>