<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/registerLinearLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/form_screen_background">
    <android.support.v7.widget.Toolbar
            android:id="@+id/registerActionBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.login.LoginActivity"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/registration"
                android:textColor="@color/primary"
                android:textSize="42sp"
                android:id="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/registerEmailTextInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLabel"
                app:errorTextAppearance="@style/TextInputLabelErrorState"
                android:id="@+id/registerEmailTextInput"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/registerPasswordTextInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:errorEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerPasswordTextInput"
                android:theme="@style/TextInputLabel"
                app:errorTextAppearance="@style/TextInputLabelErrorState"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/registerEmailTextInput"
                app:layout_constraintBottom_toTopOf="@+id/registerConfirmPasswordTextInput"
                app:layout_constraintStart_toStartOf="@+id/registerEmailTextInput"
                app:layout_constraintEnd_toEndOf="@+id/registerEmailTextInput"
                android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerConfirmPasswordTextInput"
                android:theme="@style/TextInputLabel"
                app:errorTextAppearance="@style/TextInputLabelErrorState"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextInput"
                app:layout_constraintBottom_toTopOf="@+id/buttonRegisterUser"
                app:layout_constraintStart_toStartOf="@+id/registerEmailTextInput"
                app:layout_constraintEnd_toEndOf="@+id/registerEmailTextInput"
                android:layout_marginTop="8dp">
            <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/registerConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/buttonRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/Register"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp"
                style="@style/ButtonPrimaryStyle"
                android:background="@drawable/login_button_drawable"
                android:foreground="?selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordTextInput"
                app:layout_constraintStart_toStartOf="@+id/registerPasswordTextInput"
                app:layout_constraintEnd_toEndOf="@+id/registerPasswordTextInput"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent">
        </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>